test/sh/error/declare/check_bool_not_assign.sk
mut x: Int = not true
